// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignmentScreen snapshot test should render AssignmentScreen when loader is false and photoSmall is defined and hasBoth is false 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
    />
  }
  style={
    Object {
      "flex": 1,
    }
  }
  testID="scrollview"
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "backgroundColor": "rgb(0, 122, 255)",
        }
      }
    >
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "row",
            "justifyContent": "space-around",
            "margin": 60,
          }
        }
      >
        <View
          style={
            Object {
              "borderColor": "black",
              "borderRadius": 40,
              "borderWidth": 1.5,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 37.5,
                "height": 75,
                "opacity": 1,
                "width": 75,
              }
            }
            testID="Avatar-press"
          >
            <View
              accessibilityIgnoresInvertColors={true}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 37.5,
                  "flex": 1,
                  "overflow": "hidden",
                  "position": "relative",
                }
              }
            >
              <Image
                borderRadius={37.5}
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "data:image/png;base64,undefined",
                  }
                }
                style={
                  Object {
                    "borderColor": "white",
                    "borderRadius": 40,
                    "borderWidth": 1.5,
                    "bottom": 0,
                    "flex": 1,
                    "height": null,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": null,
                  }
                }
                testID="RNE__Image"
                theme={
                  Object {
                    "colors": Object {
                      "black": "#242424",
                      "disabled": "hsl(208, 8%, 90%)",
                      "divider": "#bcbbc1",
                      "error": "#ff190c",
                      "grey0": "#393e42",
                      "grey1": "#43484d",
                      "grey2": "#5e6977",
                      "grey3": "#86939e",
                      "grey4": "#bdc6cf",
                      "grey5": "#e1e8ee",
                      "greyOutline": "#bbb",
                      "platform": Object {
                        "android": Object {
                          "error": "#f44336",
                          "grey": "rgba(0, 0, 0, 0.54)",
                          "primary": "#2196f3",
                          "secondary": "#9C27B0",
                          "success": "#4caf50",
                          "warning": "#ffeb3b",
                        },
                        "ios": Object {
                          "error": "#ff3b30",
                          "grey": "#7d7d7d",
                          "primary": "#007aff",
                          "searchBg": "#dcdce1",
                          "secondary": "#5856d6",
                          "success": "#4cd964",
                          "warning": "#ffcc00",
                        },
                      },
                      "primary": "#2089dc",
                      "searchBg": "#303337",
                      "secondary": "#ca71eb",
                      "success": "#52c41a",
                      "warning": "#faad14",
                      "white": "#ffffff",
                    },
                  }
                }
                transition={true}
              />
              <View
                accessibilityElementsHidden={true}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#bdbdbd",
                      "borderColor": "white",
                      "borderRadius": 40,
                      "borderWidth": 1.5,
                      "flex": 1,
                      "height": null,
                      "justifyContent": "center",
                      "width": null,
                    }
                  }
                  testID="RNE__Image__placeholder"
                />
              </View>
              <View
                style={
                  Object {
                    "borderColor": "white",
                    "borderRadius": 40,
                    "borderWidth": 1.5,
                    "flex": 1,
                    "height": null,
                    "width": null,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 20,
                  "textAlign": "center",
                },
              ]
            }
          >
            Next Availability Date
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 46.5,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            20-11-2018
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
            "marginTop": 34,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": undefined,
              "borderRadius": 16,
              "borderWidth": 1,
              "flexBasis": "45%",
              "height": 160,
              "justifyContent": "center",
              "margin": 15,
              "marginTop": 30,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 24,
                  "justifyContent": "center",
                },
              ]
            }
          >
            Joining Date
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 37.5,
                  "fontWeight": "bold",
                  "justifyContent": "center",
                },
              ]
            }
          >
            16-11-2018
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": undefined,
              "borderRadius": 16,
              "borderWidth": 1,
              "flexBasis": "45%",
              "height": 160,
              "justifyContent": "center",
              "margin": 15,
              "marginTop": 30,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 24,
                  "justifyContent": "center",
                },
              ]
            }
          >
            EOC Date
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 37.5,
                  "fontWeight": "bold",
                  "justifyContent": "center",
                },
              ]
            }
          >
            13-12-2018
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(0, 122, 255)",
              "borderColor": undefined,
              "borderRadius": 16,
              "borderWidth": 1,
              "flexBasis": "45%",
              "height": 160,
              "justifyContent": "center",
              "margin": 15,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 24,
                  "justifyContent": "center",
                },
              ]
            }
          >
            Port (tentative)
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 26.5,
                  "fontWeight": "bold",
                  "justifyContent": "center",
                  "textAlign": "center",
                },
              ]
            }
          >
            VALENCIA
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(0, 122, 255)",
              "borderColor": undefined,
              "borderRadius": 16,
              "borderWidth": 1,
              "flexBasis": "45%",
              "height": 160,
              "justifyContent": "center",
              "margin": 15,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 24,
                  "justifyContent": "center",
                },
              ]
            }
          >
            Vessel Name
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 26.5,
                  "fontWeight": "bold",
                  "justifyContent": "center",
                  "textAlign": "center",
                },
              ]
            }
          >
            WEC BRUEGHEL
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(0, 122, 255)",
              "borderColor": undefined,
              "borderRadius": 16,
              "borderWidth": 1,
              "flexBasis": "45%",
              "height": 160,
              "justifyContent": "center",
              "margin": 15,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 24,
                  "justifyContent": "center",
                },
              ]
            }
          >
            Vessel Flag
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 26.5,
                  "fontWeight": "bold",
                  "justifyContent": "center",
                  "textAlign": "center",
                },
              ]
            }
          >
            PMD
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(0, 122, 255)",
              "borderColor": undefined,
              "borderRadius": 16,
              "borderWidth": 1,
              "flexBasis": "45%",
              "height": 160,
              "justifyContent": "center",
              "margin": 15,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 24,
                  "justifyContent": "center",
                },
              ]
            }
          >
            Vessel IMO No.
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 26.5,
                  "fontWeight": "bold",
                  "justifyContent": "center",
                  "textAlign": "center",
                },
              ]
            }
          >
            9143972
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginBottom": 37.5,
            "marginTop": 37.5,
            "opacity": 1,
          }
        }
        testID="employment-offer-button"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2A2E43",
                "fontFamily": "Roboto-Regular",
              },
              Object {
                "alignSelf": "flex-end",
                "borderBottomColor": "#78849E",
                "borderBottomWidth": 1,
                "color": undefined,
                "fontSize": 22.5,
                "marginRight": 30,
              },
            ]
          }
        >
          Employment Offer
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "data:image/png;base64,1234",
            }
          }
          style={
            Object {
              "flex": 1,
              "height": 347,
              "width": undefined,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "center",
              "marginTop": 34,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "color": "rgb(28, 28, 30)",
                  "flexBasis": "40%",
                  "fontSize": 46.5,
                  "fontWeight": "bold",
                  "marginHorizontal": 30,
                },
              ]
            }
          >
            Vessel
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "color": "#2A2E43",
                  "flexBasis": "40%",
                  "fontSize": 46.5,
                  "fontWeight": "bold",
                  "marginHorizontal": 30,
                },
              ]
            }
          />
        </View>
        <View
          style={
            Object {
              "marginTop": 75,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "flexBasis": "40%",
                  "margin": 30,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Vessel Name
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    WEC BRUEGHEL
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": "55%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    IMO
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    9143972
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "width": "45%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Flag
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    PMD
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": "55%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    GT
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    6362
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "width": "45%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    DWT
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    7224
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": "55%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Draught
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    6.69
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "width": "45%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Beam
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    18.45
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": "55%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Length o.a.
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    121.76
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "width": "45%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Length b.p.
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    114.9
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "borderBottomColor": "#78849E",
                  "borderBottomWidth": 0.3,
                  "marginBottom": 45,
                  "marginLeft": 37.5,
                  "marginTop": 22.5,
                }
              }
            />
            <View
              style={
                Object {
                  "flexBasis": "40%",
                  "margin": 30,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Main engine series
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    L40/54
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": "55%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Main engine marker
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    MAN B&W
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "width": "45%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Main engine output
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    5300
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": "55%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    ECDIS Manufacturer
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    Object {
                      "width": "45%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    ECDIS Model
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgb(0, 122, 255)",
            "paddingTop": 22.5,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "center",
                "marginTop": 34,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "flexBasis": "90%",
                    "fontSize": 46.5,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Cargo Installation
            </Text>
          </View>
          <View
            style={
              Object {
                "margin": 37.5,
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 24,
                        "paddingRight": 22.5,
                      },
                    ]
                  }
                >
                  Number
                  :
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 26.5,
                        "fontWeight": "bold",
                        "maxWidth": "80%",
                      },
                    ]
                  }
                >
                  2
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 24,
                        "paddingRight": 22.5,
                      },
                    ]
                  }
                >
                  Unit
                  :
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 26.5,
                        "fontWeight": "bold",
                        "maxWidth": "80%",
                      },
                    ]
                  }
                >
                  TO
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 24,
                        "paddingRight": 22.5,
                      },
                    ]
                  }
                >
                  Cargo Installation
                  :
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 26.5,
                        "fontWeight": "bold",
                        "maxWidth": "80%",
                      },
                    ]
                  }
                >
                  CRANES
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 24,
                        "paddingRight": 22.5,
                      },
                    ]
                  }
                >
                  Capacity
                  :
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 26.5,
                        "fontWeight": "bold",
                        "maxWidth": "80%",
                      },
                    ]
                  }
                >
                  250
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`AssignmentScreen snapshot test should render AssignmentScreen when loader is false and photoSmall is defined and hasBoth is true 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
    />
  }
  style={
    Object {
      "flex": 1,
    }
  }
  testID="scrollview"
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "backgroundColor": "rgb(0, 122, 255)",
        }
      }
    >
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "row",
            "justifyContent": "space-around",
            "margin": 60,
          }
        }
      >
        <View
          style={
            Object {
              "borderColor": "black",
              "borderRadius": 40,
              "borderWidth": 1.5,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 37.5,
                "height": 75,
                "opacity": 1,
                "width": 75,
              }
            }
            testID="Avatar-press"
          >
            <View
              accessibilityIgnoresInvertColors={true}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 37.5,
                  "flex": 1,
                  "overflow": "hidden",
                  "position": "relative",
                }
              }
            >
              <Image
                borderRadius={37.5}
                onLoad={[Function]}
                source={
                  Object {
                    "uri": "data:image/png;base64,undefined",
                  }
                }
                style={
                  Object {
                    "borderColor": "white",
                    "borderRadius": 40,
                    "borderWidth": 1.5,
                    "bottom": 0,
                    "flex": 1,
                    "height": null,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": null,
                  }
                }
                testID="RNE__Image"
                theme={
                  Object {
                    "colors": Object {
                      "black": "#242424",
                      "disabled": "hsl(208, 8%, 90%)",
                      "divider": "#bcbbc1",
                      "error": "#ff190c",
                      "grey0": "#393e42",
                      "grey1": "#43484d",
                      "grey2": "#5e6977",
                      "grey3": "#86939e",
                      "grey4": "#bdc6cf",
                      "grey5": "#e1e8ee",
                      "greyOutline": "#bbb",
                      "platform": Object {
                        "android": Object {
                          "error": "#f44336",
                          "grey": "rgba(0, 0, 0, 0.54)",
                          "primary": "#2196f3",
                          "secondary": "#9C27B0",
                          "success": "#4caf50",
                          "warning": "#ffeb3b",
                        },
                        "ios": Object {
                          "error": "#ff3b30",
                          "grey": "#7d7d7d",
                          "primary": "#007aff",
                          "searchBg": "#dcdce1",
                          "secondary": "#5856d6",
                          "success": "#4cd964",
                          "warning": "#ffcc00",
                        },
                      },
                      "primary": "#2089dc",
                      "searchBg": "#303337",
                      "secondary": "#ca71eb",
                      "success": "#52c41a",
                      "warning": "#faad14",
                      "white": "#ffffff",
                    },
                  }
                }
                transition={true}
              />
              <View
                accessibilityElementsHidden={true}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#bdbdbd",
                      "borderColor": "white",
                      "borderRadius": 40,
                      "borderWidth": 1.5,
                      "flex": 1,
                      "height": null,
                      "justifyContent": "center",
                      "width": null,
                    }
                  }
                  testID="RNE__Image__placeholder"
                />
              </View>
              <View
                style={
                  Object {
                    "borderColor": "white",
                    "borderRadius": 40,
                    "borderWidth": 1.5,
                    "flex": 1,
                    "height": null,
                    "width": null,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 20,
                  "textAlign": "center",
                },
              ]
            }
          >
            Next Availability Date
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 46.5,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            20-11-2018
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignContent": "center",
              "backgroundColor": "rgb(0, 122, 255)",
              "flexDirection": "row",
              "justifyContent": "space-around",
            },
            Object {},
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="first-option-button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "opacity": 0.2,
                  },
                ],
              ]
            }
          >
            Current Assignment
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderBottomColor": "#2A2E43",
              "borderBottomWidth": 2,
              "opacity": 1,
            }
          }
          testID="second-option-button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 15,
                    "fontWeight": "bold",
                    "paddingBottom": 5,
                  },
                  Object {},
                  Object {},
                ],
              ]
            }
          >
            Next Assignment
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
            "marginTop": 34,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": undefined,
              "borderRadius": 16,
              "borderWidth": 1,
              "flexBasis": "45%",
              "height": 160,
              "justifyContent": "center",
              "margin": 15,
              "marginTop": 30,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 24,
                  "justifyContent": "center",
                },
              ]
            }
          >
            Joining Date
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 37.5,
                  "fontWeight": "bold",
                  "justifyContent": "center",
                },
              ]
            }
          >
            16-11-2018
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": undefined,
              "borderRadius": 16,
              "borderWidth": 1,
              "flexBasis": "45%",
              "height": 160,
              "justifyContent": "center",
              "margin": 15,
              "marginTop": 30,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 24,
                  "justifyContent": "center",
                },
              ]
            }
          >
            EOC Date
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 37.5,
                  "fontWeight": "bold",
                  "justifyContent": "center",
                },
              ]
            }
          >
            13-12-2018
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(0, 122, 255)",
              "borderColor": undefined,
              "borderRadius": 16,
              "borderWidth": 1,
              "flexBasis": "45%",
              "height": 160,
              "justifyContent": "center",
              "margin": 15,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 24,
                  "justifyContent": "center",
                },
              ]
            }
          >
            Port (tentative)
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 26.5,
                  "fontWeight": "bold",
                  "justifyContent": "center",
                  "textAlign": "center",
                },
              ]
            }
          >
            VALENCIA
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(0, 122, 255)",
              "borderColor": undefined,
              "borderRadius": 16,
              "borderWidth": 1,
              "flexBasis": "45%",
              "height": 160,
              "justifyContent": "center",
              "margin": 15,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 24,
                  "justifyContent": "center",
                },
              ]
            }
          >
            Vessel Name
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 26.5,
                  "fontWeight": "bold",
                  "justifyContent": "center",
                  "textAlign": "center",
                },
              ]
            }
          >
            WEC BRUEGHEL
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(0, 122, 255)",
              "borderColor": undefined,
              "borderRadius": 16,
              "borderWidth": 1,
              "flexBasis": "45%",
              "height": 160,
              "justifyContent": "center",
              "margin": 15,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 24,
                  "justifyContent": "center",
                },
              ]
            }
          >
            Vessel Flag
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 26.5,
                  "fontWeight": "bold",
                  "justifyContent": "center",
                  "textAlign": "center",
                },
              ]
            }
          >
            PMD
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(0, 122, 255)",
              "borderColor": undefined,
              "borderRadius": 16,
              "borderWidth": 1,
              "flexBasis": "45%",
              "height": 160,
              "justifyContent": "center",
              "margin": 15,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": undefined,
                  "fontSize": 24,
                  "justifyContent": "center",
                },
              ]
            }
          >
            Vessel IMO No.
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "alignItems": "center",
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 26.5,
                  "fontWeight": "bold",
                  "justifyContent": "center",
                  "textAlign": "center",
                },
              ]
            }
          >
            9143972
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginBottom": 37.5,
            "marginTop": 37.5,
            "opacity": 1,
          }
        }
        testID="employment-offer-button"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2A2E43",
                "fontFamily": "Roboto-Regular",
              },
              Object {
                "alignSelf": "flex-end",
                "borderBottomColor": "#78849E",
                "borderBottomWidth": 1,
                "color": undefined,
                "fontSize": 22.5,
                "marginRight": 30,
              },
            ]
          }
        >
          Employment Offer
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "data:image/png;base64,1234",
            }
          }
          style={
            Object {
              "flex": 1,
              "height": 347,
              "width": undefined,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "center",
              "marginTop": 34,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "color": "rgb(28, 28, 30)",
                  "flexBasis": "40%",
                  "fontSize": 46.5,
                  "fontWeight": "bold",
                  "marginHorizontal": 30,
                },
              ]
            }
          >
            Vessel
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#2A2E43",
                  "fontFamily": "Roboto-Regular",
                },
                Object {
                  "color": "#2A2E43",
                  "flexBasis": "40%",
                  "fontSize": 46.5,
                  "fontWeight": "bold",
                  "marginHorizontal": 30,
                },
              ]
            }
          />
        </View>
        <View
          style={
            Object {
              "marginTop": 75,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "flexBasis": "40%",
                  "margin": 30,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Vessel Name
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    WEC BRUEGHEL
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": "55%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    IMO
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    9143972
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "width": "45%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Flag
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    PMD
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": "55%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    GT
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    6362
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "width": "45%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    DWT
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    7224
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": "55%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Draught
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    6.69
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "width": "45%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Beam
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    18.45
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": "55%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Length o.a.
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    121.76
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "width": "45%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Length b.p.
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    114.9
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "borderBottomColor": "#78849E",
                  "borderBottomWidth": 0.3,
                  "marginBottom": 45,
                  "marginLeft": 37.5,
                  "marginTop": 22.5,
                }
              }
            />
            <View
              style={
                Object {
                  "flexBasis": "40%",
                  "margin": 30,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Main engine series
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    L40/54
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": "55%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Main engine marker
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    MAN B&W
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "width": "45%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    Main engine output
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  >
                    5300
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginBottom": 41.5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "width": "55%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    ECDIS Manufacturer
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    Object {
                      "width": "45%",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 24,
                        },
                      ]
                    }
                  >
                    ECDIS Model
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "rgb(28, 28, 30)",
                          "fontSize": 26.5,
                          "fontWeight": "bold",
                        },
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgb(0, 122, 255)",
            "paddingTop": 22.5,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "center",
                "marginTop": 34,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "flexBasis": "90%",
                    "fontSize": 46.5,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Cargo Installation
            </Text>
          </View>
          <View
            style={
              Object {
                "margin": 37.5,
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 24,
                        "paddingRight": 22.5,
                      },
                    ]
                  }
                >
                  Number
                  :
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 26.5,
                        "fontWeight": "bold",
                        "maxWidth": "80%",
                      },
                    ]
                  }
                >
                  2
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 24,
                        "paddingRight": 22.5,
                      },
                    ]
                  }
                >
                  Unit
                  :
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 26.5,
                        "fontWeight": "bold",
                        "maxWidth": "80%",
                      },
                    ]
                  }
                >
                  TO
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 24,
                        "paddingRight": 22.5,
                      },
                    ]
                  }
                >
                  Cargo Installation
                  :
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 26.5,
                        "fontWeight": "bold",
                        "maxWidth": "80%",
                      },
                    ]
                  }
                >
                  CRANES
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 24,
                        "paddingRight": 22.5,
                      },
                    ]
                  }
                >
                  Capacity
                  :
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "rgb(28, 28, 30)",
                        "fontSize": 26.5,
                        "fontWeight": "bold",
                        "maxWidth": "80%",
                      },
                    ]
                  }
                >
                  250
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
